--- a/index/send-money.html
+++ b/index/send-money.html
@@ -58,7 +58,7 @@
                         <label for="card-number">Card Number:</label>
                         <input type="text" id="card-number" name="card-number" class="input-field" placeholder="Enter card number">
                         <label for="amount">Amount:</label>
-                        <input type="tel" id="amount" name="amount" class="input-field" placeholder="Enter amount">
+                        <input type="text" id="amount" name="amount" class="input-field" placeholder="Enter amount">
                     `;
                 } else if (this.dataset.method === 'bank-transfer') {
                     formContainer.innerHTML = `
