--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             </nav>
         </footer>
 </body>
-<script src="../scripts/js.js"></script>
+<script src="./scripts/js.js"></script>
 </html>
 <script>
         window.addEventListener('load', function() {
