--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <div class="dashboard">
         <!-- Header -->
         <header class="header">
-            <div class="icon-style_header profile-icon"><a href="settings.html"><i class="fa-solid fa-user"></i></a>
+            <div class="icon-style_header profile-icon"><a href="./index/settings.html"><i class="fa-solid fa-user"></i></a>
                 <div class="profile">
                 <a id="profile">Profile</a>
                     <ul>
-                        <li><a href="profile.html">Profile</a></li>
-                        <li><a href="settings.html">Settings</a></li>
+                        <li><a href="./index/profile.html">Profile</a></li>
+                        <li><a href="./index/settings.html">Settings</a></li>
                         <li><a href="#">Logout</a></li>
                     </ul>
                 </div>            
@@ -27,9 +27,9 @@
                 <a href="#"><i class="fa-solid fa-bell"></i></a> <!-- Link to notification page -->
                 <div class="notification-dropdown">
                     <ul>
-                        <li><a href="notification.html">Notification 1</a></li>
-                        <li><a href="notification.html">Notification 2</a></li>
-                        <li><a href="notification.html">Notification 3</a></li>
+                        <li><a href="./index/notification.html">Notification 1</a></li>
+                        <li><a href="./index/notification.html">Notification 2</a></li>
+                        <li><a href="./index/notification.html">Notification 3</a></li>
                     </ul>
                 </div>
             </div>
@@ -40,15 +40,15 @@
             <h2>Total Balance</h2>
             <p>$5,678.90</p>
             <div class="balance-actions">
-                <button onclick="window.location.href='add-funds.html'">Add Funds</button>
-                <button onclick="window.location.href='withdraw-funds.html'">Withdraw</button>
+                <button onclick="window.location.href='./index/add-funds.html'">Add Funds</button>
+                <button onclick="window.location.href='./index/withdraw-funds.html'">Withdraw</button>
             </div>
             
         </section>
 
         <!-- Quick Access Tiles -->
         <section class="quick-access">
-            <div class="tile" onclick="window.location.href='send-money.html'">
+            <div class="tile" onclick="window.location.href='./index/send-money.html'">
                 <i class="fa-solid fa-exchange-alt"></i> <!-- Money transfer icon -->
                 Send Money
             </div> <!-- Link to send money page -->
