--- a/index/settings.html
+++ b/index/settings.html
@@ -52,7 +52,7 @@
         <section id="profile-editing">
             <h2>Profile Editing</h2>
             <!-- ...existing code... -->
-            <form action="" method="get" enctype="multipart/form-data">
+            <form action="" method="post" enctype="multipart/form-data">
                 <label for="profile-picture">Profile Picture:</label>
                 <input type="file" id="profile-picture" name="profile-picture" class="input-field">
                 <label for="bio">Bio:</label>
