changes in the transaction history page

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <ul id="transactions-list">
                 <!-- Transactions will be dynamically generated here -->
             </ul>
-            <button class="view-all">View All Transactions</button>
+            <button class="view-all" onclick="location.href='./index/transaction-history.html'">View All Transactions</button>
         </section>
     </div>
 
