--- a/index/transaction-history.html
+++ b/index/transaction-history.html
@@ -14,7 +14,14 @@
         </nav>
     </header>
     <main>
+        <section id="transaction-confirmation">
+            <!-- Transaction confirmation message will be dynamically loaded here -->
+        </section>
+        <section id="expenditure-chart">
+            <canvas id="expenditurePieChart"></canvas>
+        </section>
         <section id="transaction-list">
+            <h2>Recent Transactions</h2>
             <!-- Transaction history content will be dynamically loaded here -->
         </section>
     </main>
