--- a/index/transaction-history.html
+++ b/index/transaction-history.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Transaction History</title>
     <link rel="stylesheet" href="../css/transaction-history.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
     <header>
         <h1>Transaction History</h1>
-        <nav>
-            <a href="/index.html">Home</a>
-        </nav>
+
     </header>
     <main>
         <section id="transaction-confirmation">
@@ -26,6 +26,9 @@
         </section>
     </main>
     <footer>
+        <nav>
+            <a href="/index.html" class="icon-style_header home-icon"><i class="fa fa-home"></i></a>
+        </nav>
         <p>&copy; 2024 FinTech App. All rights reserved.</p>
     </footer>
     <script src="../scripts/transaction-history.js"></script>
