fixing trasction page

--- a/index/transaction-history.html
+++ b/index/transaction-history.html
@@ -11,12 +11,15 @@
 <body>
     <header>
         <h1>Transaction History</h1>
-
     </header>
-    <main>
+    <main>  
         <section id="transaction-confirmation">
             <!-- Transaction confirmation message will be dynamically loaded here -->
         </section>
+        <section id="expenditure-overview">
+            <div id="expenditure-list">
+                <!-- Expenditure list content will be dynamically loaded here -->
+            </div>
         <section id="expenditure-chart">
             <canvas id="expenditurePieChart"></canvas>
         </section>
@@ -27,7 +30,7 @@
     </main>
     <footer>
         <nav>
-            <a href="/index.html" class="icon-style_header home-icon"><i class="fa fa-home"></i></a>
+            <a href="../index.html" class="icon-style_header home-icon"><i class="fa fa-home"></i></a>
         </nav>
         <p>&copy; 2024 FinTech App. All rights reserved.</p>
     </footer>
