fixing sum transaction bullshit

--- a/index/transaction-history.html
+++ b/index/transaction-history.html
@@ -17,12 +17,14 @@
             <!-- Transaction confirmation message will be dynamically loaded here -->
         </section>
         <section id="expenditure-overview">
-            <div id="expenditure-list">
-                <!-- Expenditure list content will be dynamically loaded here -->
+            <div id="expenditure-chart">
+                <canvas id="expenditureBarChart"></canvas>
             </div>
-        <section id="expenditure-chart">
-            <canvas id="expenditurePieChart"></canvas>
-        </section>
+                <div id="expenditure-list">
+                <!-- Expenditure list content will be dynamically loaded here -->   
+            </div>
+        </section>    
+       
         <section id="transaction-list">
             <h2>Recent Transactions</h2>
             <!-- Transaction history content will be dynamically loaded here -->
