same shit i said in the previos commit

--- a/index.html
+++ b/index.html
@@ -21,19 +21,16 @@
                 <li><a href="./index/logout.html"><i class="fa-solid fa-sign-out"></i>Logout</a></li>
             </ul>
         </nav>
-        <div class="taskbar-toggle" id="taskbar-toggle"><i class="fa-solid fa-bars"></i></div>
-            
         <div class="main-content">
             <!-- Header -->
             <header class="header">
-                <div class="header-left">
-                    <a href="./index/settings.html" class="icon-style_header profile-icon"><i class="fa-solid fa-user"></i></a>
-                </div>
                 <div class="header-center">
                     <h1 class="welcome-message">Hello, GEORGE HUSSEIN</h1>
                 </div>
                 <div class="header-right">
-                    <a href="#" class="icon-style_header notification-icon"><i class="fa-solid fa-bell"></i></a>
+                    <a href="./index/settings.html" class="icon-style_header profile-icon" title="Settings"><i class="fa-solid fa-user"></i></a>
+                    <a href="#" class="icon-style_header notification-icon"><i class="fa-solid fa-bell" title="notifications"></i></a>
+                    <div class="taskbar-toggle" id="taskbar-toggle"><i class="fa-solid fa-bars"></i></div>
                     <div class="notification-dropdown">
                         <ul>
                             <li><a href="./index/notification.html">Notification 1</a></li>
