update styles for tiles and financial insights; adjust colors and layout for better responsiveness now we getitng there

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
         <!-- Financial Insights -->
         <section class="financial-insights" id="financial-insights">
-            <!-- Financial insights will be dynamically loaded here -->
+            <!-- Cards will be dynamically generated here -->
         </section>
     </div>
 
