added a tooltip functionality for balance actions; on nover

--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
                     <h2>Total Balance</h2>
                     <p id="total-balance">$0.00</p>
                     <div class="balance-actions">
-                        <button onclick="window.location.href='./index/add-funds.html'">
+                        <button onclick="window.location.href='./index/add-funds.html'" data-tooltip="Add money to your account">
                             <i class="fa-solid fa-plus"></i>
                             <span>Add Funds</span>
                         </button>
-                        <button onclick="window.location.href='./index/withdraw-funds.html'">
+                        <button onclick="window.location.href='./index/withdraw-funds.html'" data-tooltip="Withdraw funds to your bank account">
                             <i class="fa-solid fa-arrow-right-from-bracket"></i>
                             <span>Withdraw</span>
                         </button>
