--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<link rel="apple-touch-icon" href="apple-touch-icon.png">
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <title>User Dashboard</title>
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css">
-    <link rel="manifest" href="/index/manifest.json">
+    <link rel="manifest" href="./manifest.json">
 </head>
 <body>
     <!-- Header -->
@@ -90,6 +90,7 @@
 
             <!-- Rest of the content -->
             <section class="quick-access" id="quick-access-tiles">
+                
                 <!-- Quick access content -->
             </section>
 
@@ -112,9 +113,14 @@
     <!-- QR Code Modal -->
     <div id="qr-modal" class="modal">
         <div class="modal-content">
-            <span class="close-button">&times;</span>
+            <span class="close-button">
+                &times;
+            </span>
+            
             <h2>Scan QR Code</h2>
-            <div id="qr-code"></div>
+            <div id="qr-code">
+
+            </div>
         </div>
     </div>
 
